# tdom-demo

./: README.md  pyproject-playwright.toml  pyproject.toml
.github/workflows/: playwright.yml  tests.yml
src/tdom_demo/: __init__.py
tests/: conftest.py  test_fixtures.py  test_pages.py  test_tstring.py
tests/pwright/: test_fixtures.py  test_pages.py
