[project]
name = "tdom-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "pauleveritt", email = "paul.everitt@jetbrains.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
tdom-demo = "tdom_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-playwright>=0.7.0",
]
