[project]
name = "tdom-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "pauleveritt", email = "pauleveritt@me.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
tdom-demo = "tdom_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
addopts = [
    "--ignore=tests/pwright",
]
